--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"]
+      "@/*": ["*"],
+      "@components/*": ["components/*"],
+      "@content/*": ["content/*"]
     },
     "target": "ES2017",
     "lib": [
@@ -31,7 +33,9 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "**/*.mdx",
+    "**/*.d.ts" 
   ],
   "exclude": [
     "node_modules"
