--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "autoprefixer": "^10.4.21",
-    "next": "^15.5.2",
+    "clsx": "^2.1.1",
+    "next": "^15.5.4",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.12"
+    "react-youtube": "^10.1.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -14,8 +15,14 @@
     "start": "next start"
   },
   "devDependencies": {
-    "@types/node": "24.3.0",
-    "@types/react": "19.1.12",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.4",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "tailwindcss": "^4.1.14",
     "typescript": "5.9.2"
   }
 }
