--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.8",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
