--- a/.github/workflows/indexnow.yml
+++ b/.github/workflows/indexnow.yml
@@ -1,14 +1,17 @@
 name: IndexNow on push
+
 on:
   push:
-    branches: [ main ]   # ← 如不是 main，这里改成你的默认分支
+    branches: [ main ]   # 如果你的默认分支是 master，请改为 master
+  workflow_dispatch:      # 允许手动触发任务
 
 jobs:
   submit:
     runs-on: ubuntu-latest
     env:
-      DOMAIN: https://www.whisperofthehouse.com   # ← 你的站点域名（带 https）
-      INDEXNOW_KEY: ${{ secrets.INDEXNOW_KEY }}   # ← 仓库 Secret
+      DOMAIN: https://www.whisperofthehouse.com
+      # 直接在这里写死密钥，省去配置 Secrets 的步骤
+      INDEXNOW_KEY: "cb5ad8431a4a499d9048348786f972eb"
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 2 }
@@ -18,13 +21,13 @@ jobs:
           BEFORE: ${{ github.event.before }}
           SHA: ${{ github.sha }}
         run: |
-          # 计算基线提交（合并/多次提交也兼容）
+          # 计算差异，找出变动的文件
           BASE="${BEFORE:-$(git rev-parse HEAD^)}"
           git diff --name-only "$BASE" "$SHA" > changed.txt || true
-
-          # 依据你的项目结构筛选“会映射到 URL 的源文件”
-          # 如有自定义目录（例如 posts/、blog/），在正则里加进去
-          grep -E '^(app/|src/app/).*?/page\.(t|j)sx|^(pages/|src/pages/).*\.(t|j)sx|^(content|posts)/.*\.(md|mdx)|^public/.*\.html$' changed.txt > urlfiles.txt || true
+          
+          # 筛选出网页文件（针对 HTML 或内容目录）
+          grep -E '^(app/|src/app/).*?page\.(t|j)sx|^(pages/|src/pages/).*\.(t|j)sx|^(content|posts)/.*\.(md|mdx)|^public/.*\.html$' changed.txt > urlfiles.txt || true
+          echo "Changed files detected:"
           cat urlfiles.txt || true
 
       - name: Build payload
@@ -35,46 +38,45 @@ jobs:
           key = os.environ['INDEXNOW_KEY']
 
           try:
-            paths = [l.strip() for l in open('urlfiles.txt') if l.strip()]
+            with open('urlfiles.txt') as f:
+                paths = [l.strip() for l in f if l.strip()]
           except FileNotFoundError:
             paths = []
 
           def to_url(p: str):
             p = p.replace('\\','/')
-            # 静态文件直接挂到根
             if p.startswith('public/'):
               return f"{domain}/" + p[len('public/'):].lstrip('/')
-
-            # Next.js app router
-            if p.startswith('app/') or p.startswith('src/app/'):
+            if p.startswith(('app/', 'src/app/')):
               u = re.sub(r'^(src/)?app/','',p)
-              u = re.sub(r'/page\.(t|j)sx$','',u)  # /foo/page.tsx -> /foo
+              u = re.sub(r'/page\.(t|j)sx$','',u)
               return f"{domain}/" + u.strip('/')
-
-            # Next.js pages router
-            if p.startswith('pages/') or p.startswith('src/pages/'):
+            if p.startswith(('pages/', 'src/pages/')):
               u = re.sub(r'^(src/)?pages/','',p)
-              u = re.sub(r'/index\.(t|j)sx$','/',u)   # /about/index.tsx -> /about/
-              u = re.sub(r'\.(t|j)sx$','',u)         # /about.tsx -> /about
+              u = re.sub(r'/index\.(t|j)sx$','/',u)
+              u = re.sub(r'\.(t|j)sx$','',u)
               return f"{domain}/" + u.strip('/')
-
-            # 内容目录（按你的站点路由改这里）
             if p.startswith(('content/','posts/')):
               u = re.sub(r'^(content/|posts/)', '', p)
               u = re.sub(r'\.(md|mdx)$','',u)
               return f"{domain}/" + u.strip('/')
-
             return None
 
           urls = sorted({ u for p in paths for u in [to_url(p)] if u })
+          
+          # 如果没有任何页面变动，至少提交主页确保索引触发
+          if not urls:
+              urls = [domain + "/"]
+
           payload = {
             "host": re.sub(r'^https?://','',domain),
             "key": key,
             "keyLocation": f"{domain}/{key}.txt",
             "urlList": urls
           }
-          open('payload.json','w').write(json.dumps(payload))
-          print(json.dumps(payload, indent=2))
+          with open('payload.json','w') as f:
+              f.write(json.dumps(payload))
+          print(f"Payload created with {len(urls)} URLs")
           PY
 
       - name: Submit to IndexNow
